2007-05-28  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* FormTest.cs: Increase timeout value. Might prevent tests from failing
	  on slower computers.

2007-05-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* DateTimePickerTest.cs: Added tests for MinDate and MaxDate.

2007-05-27  Gert Driesen  <drieseng@users.sourceforge.net>

	* DateTimePickerTest.cs: Avoid test failures on Windows system with
	non-us locale.

2007-05-27  Gert Driesen  <drieseng@users.sourceforge.net>

	* NumericUpDownTest.cs: Avoid use of global identifier since csc 1.x
	does not support this.
	* FormTest.cs: Avoid using anonymous methods. Allows our test to build
	again using csc 1.x.

2007-05-27  Gert Driesen  <drieseng@users.sourceforge.net>

	* TreeNodeCollectionTest.cs: Added tests for Add and AddRange. Fixed
	and improved test for IList indexer.

2007-05-25  Gert Driesen  <drieseng@users.sourceforge.net>

	* TextBoxTest.cs: Improve tests for Copy, Cut and Paste to also cover
	bug #81736.

2007-05-25  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* KeyEventArgsTest.cs: Added.

2007-05-24  Andreia Gaita  <avidigal@novell.com>

	* NumericUpDownTest.cs: Added 1.1 and 2.0 tests.

2007-05-24  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListControlTest.cs:
	* CheckedListBoxTest.cs: Move the GetItemText test
	to ListControl, since the method it's part of it. Also
	add a FilterItemOnProperty test.

2007-05-24  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayoutTest.cs: Add test for bug 81199. (nested controls)

2007-05-24  Jonathan Pobst  <monkey@jpobst.com>

	* ContainerControlTest.cs: Test to show ProcessMnemonic is called
	regardless of CanSelect.

2007-05-23  Jonathan Pobst  <monkey@jpobst.com>

	* TestHelper.cs: Remove reference to event_log from constructor.

2007-05-23  Jonathan Pobst  <monkey@jpobst.com>

	* ControlTest.cs: Add test to show that setting a control's Visible
	property causes it's parent to relayout.

2007-05-23  Jonathan Pobst  <monkey@jpobst.com>
